# rust-backend-starter

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.musl  docker-compose.yml
src/: auth.rs  config.rs  error.rs  main.rs  middleware.rs  queries.rs  rbac.rs  routes.rs  state.rs
src/entity/: mod.rs  prelude.rs  refresh_tokens.rs  users.rs
src/repository/: refresh_token.rs  user.rs
src/services/: admin.rs  user.rs  user_service.rs
