[package]
name = "rust-backend-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
jsonwebtoken = "9"
bcrypt = "0.15"
serde_json = "1"
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json", "with-uuid" ] }
uuid = { version = "1.16.0", features = [ "v4" ] }
tracing-subscriber = { version = "0.3" }
tracing = "0.1"
dotenvy = "0.15"